charts/custom/vault-server/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vault-server
  labels:
    name: vault-server
spec:
  ports:
  - name: api
    port: 8200
    protocol: TCP
  - name: cluster
    port: 8201
    protocol: TCP
  selector:
    app: vault-server
