charts/custom/vault-server/templates/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault-server-route
spec:
  entryPoints:
  - websecure
  routes:
  - match: 'Host(`vault.docker.localhost`)'
    kind: Rule
    services:
    - kind: Service
      name: vault-server
      namespace: vault-system
      scheme: https
      passHostHeader: true
      serversTransport: vault-server-transport
      port: 8200
  tls:
    secretName: vault-docker-localhost-client
